Fixed (many) checkstyle warnings.